반응형 레이아웃 작업

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
 		<div class="inner">
 
 			<ul class="menu">
+				<li class="menu-starter">
+					<a>
+						<div>
+							<span></span>
+							<span></span>
+						</div>
+					</a>
+				</li>
+
 				<li class="apple-logo"><a href="javascript:void(0)">Apple</a></li>
 				<li><a href="javascript:void(0)">스토어</a></li>
 				<li><a href="javascript:void(0)">Mac</a></li>
@@ -76,6 +85,8 @@
 						<div class="search-closer"></div>
 					</div>
 
+					<div class="search-canceler">취소</div>
+
 					<div class="autocompletes">
 						<h3>빠른 링크</h3>
 						<ul>
@@ -90,15 +101,34 @@
 				</div>
 			</div>
 
+			<div class="clone-menu">
+				<ul>
+					<li><a href="javascript:void(0)">스토어</a></li>
+					<li><a href="javascript:void(0)">Mac</a></li>
+					<li><a href="javascript:void(0)">iphone</a></li>
+					<li><a href="javascript:void(0)">Watch</a></li>
+					<li><a href="javascript:void(0)">AirPods</a></li>
+					<li><a href="javascript:void(0)">Apple 독점 제공</a></li>
+					<li><a href="javascript:void(0)">악세서리</a></li>
+					<li><a href="javascript:void(0)">고객지원</a></li>
+				</ul>
+			</div>
+
 		</div>
 
 	</header>
 
 	<!-- Navigation -->
 	<nav>
+
+		<div class="shadow"></div>
+
+		<div class="contents-bg"></div>
+
 		<div class="inner">
 
 			<h1>iPad</h1>
+			<div class="menu-toggler"></div>
 			<ul class="menu">
 				<li class="active"><a href="javascript:void(0)">개요</a></li>
 				<li><a href="javascript:void(0)">아이패드를 선택하는 이유</a></li>
@@ -158,7 +188,7 @@
 			</div>
 
 			<div class="arcade feature">
-				<h1>아케이드</h1>
+				<h1 class="bgtext">아케이드</h1>
 				<div class="figures">
 					<figure>
 						<img src="./images/power_arcade.png" alt="iPad에 Wonderbox 앱이 열려 있는 모습" />						
@@ -221,7 +251,7 @@
 		<div class="shareplay feature">
 			<div class="figures">
 				<figure>
-					<img src="./images/display_shareplay.png" alt="Sharplay 기능으로 영상을 함께 즐기는 모습" />
+					<img src="./images/display_shareplay.png" alt="Shareplay 기능으로 영상을 함께 즐기는 모습" />
 					<figcaption class="bgtext">함께 보고 함께 즐기고</figcaption>
 				</figure>
 			</div>
@@ -308,7 +338,7 @@
 	<div class="inner">
 
 		<div class="facetime">
-			<h1></h1>
+			<h1 class="bgtext"></h1>
 			<div class="figures">
 				<figure>
 					<img src="./images/wireless_facetime.jpg" alt="19명이 참여중인 FaceTime 영상 통화" />
